# django-versatileimagefield

./: .gitignore  README.rst  pyproject.toml
versatileimagefield/datastructures/: sizedimage.py
